--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
   "directory": "resources/assets/vendor",
   "dependencies": {
     "bootstrap": "~3.3.4",
-    "startbootstrap-grayscale": "git@github.com:IronSummitMedia/startbootstrap-grayscale.git#~1.0.3"
+    "startbootstrap-grayscale": "git@github.com:IronSummitMedia/startbootstrap-grayscale.git#~1.0.3",
+    "jquery.easing": "~1.3.1",
+    "components-font-awesome": "~4.3.0"
   }
 }
